--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -215,4 +215,4 @@ layout: default
         {% endif %}
 	</div>
 </div>
-<script id="c_n_script" src="js/lizi.js" color="66, 66,66" opacity="1" count="100" zindex="-1"></script>
+<!-- <script id="c_n_script" src="js/lizi.js" color="66, 66,66" opacity="1" count="100" zindex="-1"></script> -->
